# buildbot-mattermost-reporter

./: .gitattributes  LICENSE  MANIFEST.in  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
src/buildbot_mattermost/: reporter.py
tests/: test_reporter.py
